Prevent long link overflow

--- a/rsc/less/basic_styles.less
+++ b/rsc/less/basic_styles.less
@@ -23,6 +23,11 @@
 	height: 22px;
 }
 
+// Break all long links:
+a {
+	word-break: break-all;
+}
+
 // ------ Styles to hide/show depending on window width (from bootstrap library):
 .visible-xs,
 .visible-sm,
