--- a/rsc/less/bootstrap-basic_styles.less
+++ b/rsc/less/bootstrap-basic_styles.less
@@ -31,6 +31,11 @@ div.filters .filter_item {
 	}
 }
 
+// Break all long links:
+a {
+	word-break: break-all;
+}
+
 // ------
 
 // Meta categories that appears on categories widget:
